/*
 * Copyright Â© 2024 Kaleido, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package github.com.kaleido_io.paladin.toolkit;

import "google/protobuf/any.proto";

message ConfigureTransportRequest {
  string name = 1; // The name
  string config_yaml = 2; // The block of YAML supplied in the configuration for the domain by the Paladin administrator
}

message ConfigureTransportResponse {
    TransportConfig transport_config = 1;
}

message SendMessageRequest {
    string transport_details = 1;
    google.protobuf.Any body = 2;
}

message SendMessageResponse {
}

message ReceiveMessageRequest {
    google.protobuf.Any body = 1;
}

message ReceiveMessageResponse {
}

message InitTransportRequest {
    string transport_uuid = 1; // A runtime instance UUID of this domain, that it must supply on all requests
}

message InitTransportResponse {
}

message TransportConfig {}